apply plugin: 'java'
apply plugin: 'eclipse'


def getAppVersion = { ->
  Properties props = new Properties()
  props.load(new FileInputStream("src/main/resources/app.properties"))
  return props.appVersion
}

repositories {
    jcenter()
    
}

allprojects
{
  sourceCompatibility = 1.8
  targetCompatibility = 1.8
}

task execute(type:JavaExec) {
   main = 'com.marasm.smartyPi4Home.main.SmartyPi4Home'
   classpath = sourceSets.main.runtimeClasspath
}

dependencies {
  compile 'com.pi4j:pi4j-core:1.2',
          'org.slf4j:slf4j-api:1.7.25',
          'org.apache.logging.log4j:log4j-slf4j-impl:2.9.1',
          'org.apache.logging.log4j:log4j-core:2.9.1',
          'com.amazonaws:aws-iot-device-sdk-java:1.3.7',
          'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
  
  
  testCompile 'junit:junit:4.12'
}

sourceSets{
  main
  {
    java
    {
      srcDirs = ['src/main/java','Common/src','Lcd4Pi/src/main/java']
    }
    resources
    {
      srcDir 'src/main/resources'
    }
  }
}

jar {
  archiveName = "smartyPi4Home-" + getAppVersion + ".jar"
}
